# IMDBx

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
IMDBx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
imdbx/: __init__.py  _browser.py  _display.py  _http.py  _log.py  _parse.py  _scraper.py  cli.py  models.py
tests/: test_http_session_and_load.py  test_models_episode_dataclass.py  test_models_series_title_info.py  test_parse_episode_cards.py  test_parse_series_metadata.py
