[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
#  Project metadata
# ─────────────────────────────────────────────────────────────────────────────

[project]
name        = "IMDBx"
version     = "1.0.0"
description = "IMDBx - Titles, ratings, air dates, descriptions and cover art across every episode of any TV series."
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["imdbx", "scraper", "episodes", "tv", "anime", "playwright", "beautifulsoup"]

authors = [
    { name = "IMDBx", email = "imdbx@imdbx.dev" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "niquests>=3.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage      = "https://github.com/ENC4YP7ED/IMDBx"
Repository    = "https://github.com/ENC4YP7ED/IMDBx"
"Bug Tracker" = "https://github.com/ENC4YP7ED/IMDBx/issues"
Changelog     = "https://github.com/ENC4YP7ED/IMDBx/releases"

# ─────────────────────────────────────────────────────────────────────────────
#  Entry points
# ─────────────────────────────────────────────────────────────────────────────

[project.scripts]
# After `pip install .` you can run:  imdbx tt7441658
imdbx = "imdbx.cli:main"

# ─────────────────────────────────────────────────────────────────────────────
#  Package discovery
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["imdbx*"]

[tool.setuptools.package-data]
"imdbx" = ["py.typed"]

# ─────────────────────────────────────────────────────────────────────────────
#  pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = "-v --tb=short"

# ─────────────────────────────────────────────────────────────────────────────
#  Coverage
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source  = ["imdbx"]
omit    = ["imdbx/cli.py", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ─────────────────────────────────────────────────────────────────────────────
#  Ruff (linter + formatter)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
